--- a/gb/25/12/3/n14648290.md
+++ b/gb/25/12/3/n14648290.md
@@ -21,17 +21,12 @@
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="https://dajiyuan.com.au/" data-cke-saved-href="https://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648206.md#1">西澳法轮功学员参加圣诞游行 市长致谢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647868.md#1">澳军司令：中共舰队隐身菲律宾海 或驶向澳洲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647967.md#1">油车销量持续下滑 低排放车型全面赶超</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647943.md#1">谷歌因签反竞争协议被罚5500万澳元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647853.md#1">新州警方突击扫黑 逮捕六人 查扣逾千万资产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647870.md#1">澳洲GDP增长攀升至两年高点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647684.md#1">澳品牌红黑榜出炉 Temu排不信任榜单第五</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647821.md#1">读大学还是学技术 ?哪种选择在澳洲回报更高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647680.md#1">NAPLAN成绩出炉 悉尼富裕区小学表现下滑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/10/n10773796.md#1" target="_blank">邪恶帝国——里根总统谴责苏联共产政权</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
